# ByteBufferCpp

./: .gitignore  CMakeLists.txt  LICENSE.TXT  Makefile  README  README.md
src/: ByteBuffer.cpp  ByteBuffer.h  ByteBuffer.hpp  test.cpp
src/examples/http/: HTTPMessage.cpp  HTTPMessage.h  HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.cpp  HTTPResponse.h  http.cpp
src/examples/packets/: packets.cpp
vc10/: ByteBufferCpp.sln  ByteBufferCpp.vcxproj  ByteBufferCpp.vcxproj.filters
